--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 uc_admissions/raw_data/
 tiktok_songs/raw_data/
-uc_admissions/UC_admissions_data_draft  
+uc_admissions/UC_admissions_data_draft.ipynb 
